katars/tests/snaps/snapshots/snap_errors__struct_field_type_mismatch.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"kind P { x: Int }\\nP { x: \\\"wrong\\\" }\")"
---
Error: type mismatch: expected Int, got Str
   ╭─[<test>:2:8]
   │
 2 │ P { x: "wrong" }
   │        ───┬───  
   │           ╰───── type mismatch: expected Int, got Str
───╯
